--- a/Info.plist
+++ b/Info.plist
@@ -10,5 +10,9 @@
 	<string>silverstripe</string>
 	<key>isDashDocset</key>
 	<true/>
+	<key>dashIndexFilePath</key>
+	<string>index.html</string>
+	<key>isJavaScriptEnabled</key>
+	<true/>
 </dict>
 </plist>
